--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
 
     <!-- First Body of Information -->
     <section class="content">
+        <!-- Search Engine Optimization Section -->
         <section class="infosection">
             <img src="./assets/images/search-engine-optimization.jpg" class="float-left" alt = "Search Engine Optimization" />
             <h2 id = "search-engine-optimization">Search Engine Optimization</h2>
@@ -39,6 +40,7 @@
                 The dominance of mobile internet use means that users are searching for the right business as they travel, shop, or sit on their couch at home. Search Engine Optimization (SEO) allows you to increase your visibility and find the right customers for your business.
             </p>
         </section>
+        <!-- Online Reputation Management Section -->
         <section class="infosection">
             <img src="./assets/images/online-reputation-management.jpg" class="float-right" alt = "Online Reputation Management" />
             <h2 id = "online-reputation-management">Online Reputation Management</h2>
@@ -46,6 +48,7 @@
                 The web is full of opinions, and some of these can be negative. Social media allows anyone with an internet connection to say whatever they want about your business. Online Reputation Management gives you the control over what potential customers see when they search for your business.
             </p>
         </section>
+        <!-- Social Media Marketing Section -->
         <section class="infosection">
             <img src="./assets/images/social-media-marketing.jpg" class="float-left" alt = "Social Media Marketing" />
             <h2 id = "social-media-marketing">Social Media Marketing</h2>
@@ -57,6 +60,7 @@
 
     <!-- Second Body of Information -->
     <section class="benefits">
+        <!-- Lead Generation Section -->
         <section>
             <h3>Lead Generation</h3>
             <img src="./assets/images/lead-generation.png" alt = "Lead Generation" />
@@ -64,6 +68,7 @@
                 Inbound strategies for lead generation require less work for your business, bringing customers directly to your website.
             </p>
         </section>
+        <!-- Brand Awareness Section -->
         <section>
             <h3>Brand Awareness</h3>
             <img src="./assets/images/brand-awareness.png" alt = "Brand Awareness" />
@@ -71,6 +76,7 @@
                 Users find your business through paid and organic searches, increasing the search ranking and visibility for your business.
             </p>
         </section>
+        <!-- Cost Management Section -->
         <section>
             <h3>Cost Management</h3>
             <img src="./assets/images/cost-management.png" alt = "Cost Management" />
